@@ -1,9 +1,15 @@
 package dtool.ast.expressions;
 
+import java.util.Collection;
+import java.util.Collections;
+
 import dtool.ast.ASTCodePrinter;
 import dtool.ast.ASTNodeTypes;
 import dtool.ast.IASTVisitor;
 import dtool.ast.NodeListView;
+import dtool.ast.definitions.INamedElement;
+import dtool.resolver.LanguageIntrinsics;
+import dtool.resolver.api.IModuleResolver;
 
 public class ExpLiteralArray extends Expression {
 	
@@ -26,6 +32,11 @@ public class ExpLiteralArray extends Expression {
 	@Override
 	public void toStringAsCode(ASTCodePrinter cp) {
 		cp.appendNodeList("[ ", elements, ", " , " ]");
+	}
+	
+	@Override
+	public Collection<INamedElement> findTargetDefElements(IModuleResolver moduleResolver, boolean findFirstOnly) {
+		return Collections.<INamedElement>singleton(LanguageIntrinsics.d_2_063_intrinsics.dynArrayType);
 	}
 	
 }
