@@ -1,8 +1,14 @@
 package dtool.ast.expressions;
 
+import java.util.Collection;
+import java.util.Collections;
+
 import dtool.ast.ASTCodePrinter;
 import dtool.ast.ASTNodeTypes;
 import dtool.ast.IASTVisitor;
+import dtool.ast.definitions.INamedElement;
+import dtool.resolver.LanguageIntrinsics;
+import dtool.resolver.api.IModuleResolver;
 
 public class ExpLiteralBool extends Expression {
 	
@@ -24,6 +30,11 @@ public class ExpLiteralBool extends Expression {
 	@Override
 	public void toStringAsCode(ASTCodePrinter cp) {
 		cp.append(value ? "true" : "false");
+	}
+	
+	@Override
+	public Collection<INamedElement> findTargetDefElements(IModuleResolver moduleResolver, boolean findFirstOnly) {
+		return Collections.<INamedElement>singleton(LanguageIntrinsics.d_2_063_intrinsics.bool_type);
 	}
 	
 }
