@@ -1,10 +1,17 @@
 package dtool.ast.expressions;
 
 import static melnorme.utilbox.core.Assert.AssertNamespace.assertNotNull;
+
+import java.util.Collection;
+import java.util.Collections;
+
 import dtool.ast.ASTCodePrinter;
 import dtool.ast.ASTNodeTypes;
 import dtool.ast.IASTVisitor;
+import dtool.ast.definitions.INamedElement;
 import dtool.parser.IToken;
+import dtool.resolver.LanguageIntrinsics;
+import dtool.resolver.api.IModuleResolver;
 
 public class ExpLiteralFloat extends Expression {
 	
@@ -26,6 +33,11 @@ public class ExpLiteralFloat extends Expression {
 	@Override
 	public void toStringAsCode(ASTCodePrinter cp) {
 		cp.appendToken(floatNum);
+	}
+	
+	@Override
+	public Collection<INamedElement> findTargetDefElements(IModuleResolver moduleResolver, boolean findFirstOnly) {
+		return Collections.<INamedElement>singleton(LanguageIntrinsics.d_2_063_intrinsics.float_type);
 	}
 	
 }
