@@ -7,7 +7,6 @@ arrayD.#REFSEARCH¤【#@ARRAY_PROPERTIES】;
 
 
 ▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂ Array literals
-#PROJECT(rawProject)
-auto _dummy = "string".#REFSEARCH¤【#@ARRAY_PROPERTIES】;
-auto _dummy = [1, 2 , 3].#REFSEARCH¤【#@ARRAY_PROPERTIES】;
-auto _dummy = 1 + [1, 2 , 3].#REFSEARCH¤【#@ARRAY_PROPERTIES】; // To disambiguate from array initializer node
+
+auto _dummy = "string" .#REFSEARCH¤【#@ARRAY_PROPERTIES】;
+auto _dummy = [1, 2 , 3] .#REFSEARCH¤【#@ARRAY_PROPERTIES】;
